--- a/codeigniter/application/resource/ini/app.ini
+++ b/codeigniter/application/resource/ini/app.ini
@@ -12,6 +12,7 @@ banner_id			=	"01"																	; バナーID
 csv_all				=	"http://duga.jp/productcsv/type=mp4/category=11/"						; 作品データcsvダウンロードURL(全期間)
 csv_month			=	"http://duga.jp/productcsv/type=mp4/category=11/openstt=%YYYYmm%01/"	; 作品データcsvダウンロードURL(月指定)
 ranking				=	"http://duga.jp/ranking/=/category=11/"									; ランキングURL
+main_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/240x180.jpg"			; メインサムネイルURL
 
 ; 各種フラグ
 [flag]
