カテゴリークローラー実装

--- a/codeigniter/application/resource/ini/app.ini
+++ b/codeigniter/application/resource/ini/app.ini
@@ -4,18 +4,42 @@
 
 ; 共通
 [common]
-agent_id			=	"22125"																	; 代理店ID
-banner_id			=	"01"																	; バナーID
-
-; 各種URL
-[url]
-csv_all				=	"http://duga.jp/productcsv/type=mp4/category=11/"						; 作品データcsvダウンロードURL(全期間)
-csv_month			=	"http://duga.jp/productcsv/type=mp4/category=11/openstt=%YYYYmm%01/"	; 作品データcsvダウンロードURL(月指定)
-ranking				=	"http://duga.jp/ranking/=/category=11/"									; ランキングURL
-main_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/240x180.jpg"			; メインサムネイルURL
-sub_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/scap/%NUM%.jpg"		; サブサムネイルURL
-affiliate_link		=	"http://click.duga.jp/%PATH%%AGENT_ID%-%BANNER_ID%"						; アフィリエイトリンク
+agent_id			=	"22125"																					; 代理店ID
+banner_id			=	"01"																					; バナーID
 
 ; 各種フラグ
 [flag]
-initial_crawl		=	1																		; 初回クロールフラグ (有効:1/無効:0)
+initial_crawl		=	1																						; 初回クロールフラグ (有効:1/無効:0)
+
+; 各種URL
+[url]
+csv_all				=	"http://duga.jp/productcsv/type=mp4/category=11/"										; 作品データcsvダウンロードURL(全期間)
+csv_month			=	"http://duga.jp/productcsv/type=mp4/category=11/openstt=%YYYYmm%01/"					; 作品データcsvダウンロードURL(月指定)
+ranking				=	"http://duga.jp/ranking/=/category=11/"													; ランキングURL
+category			=	"http://duga.jp/search/=/q=%CATEGORY_NAME%/category=11/viewcount=100/pageno=%PAGE%/"	; カテゴリーURL
+main_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/240x180.jpg"							; メインサムネイルURL
+sub_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/scap/%NUM%.jpg"						; サブサムネイルURL
+affiliate_link		=	"http://click.duga.jp/%PATH%%AGENT_ID%-%BANNER_ID%"										; アフィリエイトリンク
+
+; カテゴリー名
+[category]
+name[]				=	"クンニ"																					; カテゴリーID 1
+name[]				=	"熟女"																					; カテゴリーID 2
+name[]				=	"レズキス"																				; カテゴリーID 3
+name[]				=	"巨乳"																					; カテゴリーID 4
+name[]				=	"女子校生"																				; カテゴリーID 5
+name[]				=	"指マン"																					; カテゴリーID 6
+name[]				=	"乱交"																					; カテゴリーID 7
+name[]				=	"素人"																					; カテゴリーID 8
+name[]				=	"人妻"																					; カテゴリーID 9
+name[]				=	"痴女"																					; カテゴリーID 10
+name[]				=	"潮吹き"																					; カテゴリーID 11
+name[]				=	"アナル"																					; カテゴリーID 12
+name[]				=	"エステ"																					; カテゴリーID 13
+name[]				=	"オナニー"																				; カテゴリーID 14
+name[]				=	"ギャル"																					; カテゴリーID 15
+name[]				=	"盗撮"																					; カテゴリーID 16
+name[]				=	"OL"																					; カテゴリーID 17
+name[]				=	"ふたなり"																				; カテゴリーID 18
+name[]				=	"潮吹き"																					; カテゴリーID 19
+name[]				=	"バイブ"																					; カテゴリーID 20
