カテゴリー実装

--- a/codeigniter/application/resource/ini/app.ini
+++ b/codeigniter/application/resource/ini/app.ini
@@ -41,5 +41,6 @@ name[]				=	"ギャル"																					; カテゴリーID 15
 name[]				=	"盗撮"																					; カテゴリーID 16
 name[]				=	"OL"																					; カテゴリーID 17
 name[]				=	"ふたなり"																				; カテゴリーID 18
-name[]				=	"潮吹き"																					; カテゴリーID 19
-name[]				=	"バイブ"																					; カテゴリーID 20
+name[]				=	"バイブ"																					; カテゴリーID 19
+name[]				=	"美少女"																					; カテゴリーID 20
+name[]				=	"盗撮"																					; カテゴリーID 21
