女優名を取得するクローラー実装

--- a/codeigniter/application/resource/ini/app.ini
+++ b/codeigniter/application/resource/ini/app.ini
@@ -20,6 +20,7 @@ category			=	"http://duga.jp/search/=/q=%CATEGORY_NAME%/category=11/viewcount=10
 main_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/240x180.jpg"							; メインサムネイルURL
 sub_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/scap/%NUM%.jpg"						; サブサムネイルURL
 affiliate_link		=	"http://click.duga.jp/%PATH%%AGENT_ID%-%BANNER_ID%"										; アフィリエイトリンク
+actress_list		=	"http://duga.jp/main/av/%ORDER%.html"													; 女優一覧URL
 
 ; カテゴリー名
 [category]
@@ -44,3 +45,52 @@ name[]				=	"ふたなり"																				; カテゴリーID 18
 name[]				=	"バイブ"																					; カテゴリーID 19
 name[]				=	"美少女"																					; カテゴリーID 20
 name[]				=	"盗撮"																					; カテゴリーID 21
+
+; 女優名50音順
+[actress_list]
+order[]				=	"a"																						; あ
+order[]				=	"i"																						; い
+order[]				=	"u"																						; う
+order[]				=	"e"																						; え
+order[]				=	"o"																						; お
+order[]				=	"ka"																					; か
+order[]				=	"ki"																					; き
+order[]				=	"ku"																					; く
+order[]				=	"ke"																					; け
+order[]				=	"ko"																					; こ
+order[]				=	"sa"																					; さ
+order[]				=	"si"																					; し
+order[]				=	"su"																					; す
+order[]				=	"se"																					; せ
+order[]				=	"so"																					; そ
+order[]				=	"ta"																					; た
+order[]				=	"ti"																					; ち
+order[]				=	"tu"																					; つ
+order[]				=	"te"																					; て
+order[]				=	"to"																					; と
+order[]				=	"na"																					; な
+order[]				=	"ni"																					; に
+order[]				=	"nu"																					; ぬ
+order[]				=	"ne"																					; ね
+order[]				=	"no"																					; の
+order[]				=	"ha"																					; は
+order[]				=	"hi"																					; ひ
+order[]				=	"hu"																					; ふ
+order[]				=	"he"																					; へ
+order[]				=	"ho"																					; ほ
+order[]				=	"ma"																					; ま
+order[]				=	"mi"																					; み
+order[]				=	"mu"																					; む
+order[]				=	"me"																					; め
+order[]				=	"mo"																					; も
+order[]				=	"ya"																					; や
+order[]				=	"yu"																					; ゆ
+order[]				=	"yo"																					; よ
+order[]				=	"ra"																					; ら
+order[]				=	"ri"																					; り
+order[]				=	"ru"																					; る
+order[]				=	"re"																					; れ
+order[]				=	"ro"																					; ろ
+order[]				=	"wa"																					; わ
+order[]				=	"wo"																					; を
+order[]				=	"n"																						; ん
