女優で探す実装

--- a/codeigniter/application/resource/ini/app.ini
+++ b/codeigniter/application/resource/ini/app.ini
@@ -46,7 +46,7 @@ name[]				=	"バイブ"																					; カテゴリーID 19
 name[]				=	"美少女"																					; カテゴリーID 20
 name[]				=	"盗撮"																					; カテゴリーID 21
 
-; 女優名50音順
+; 女優名50音順ソート
 [actress_list]
 order[]				=	"a"																						; あ
 order[]				=	"i"																						; い
@@ -94,3 +94,25 @@ order[]				=	"ro"																					; ろ
 order[]				=	"wa"																					; わ
 order[]				=	"wo"																					; を
 order[]				=	"n"																						; ん
+
+order_group[]		=	"a,i,u,e,o"																				; あいうえお
+order_group[]		=	"ka,ki,ku,ke,ko"																		; かきくけこ
+order_group[]		=	"sa,si,su,se,so"																		; さしすせそ
+order_group[]		=	"ta,ti,tu,te,to"																		; たちつてと
+order_group[]		=	"na,ni,nu,ne,no"																		; なにぬねの
+order_group[]		=	"ha,hi,hu,he,ho"																		; はひふへほ
+order_group[]		=	"ma,mi,mu,me,mo"																		; まみむめも
+order_group[]		=	"ya,yu,yo"																				; やゆよ
+order_group[]		=	"ra,ri,ru,re,ro"																		; らりるれろ
+order_group[]		=	"wa,wo,n"																				; わをん
+
+order_group_btn[]	=	"あ行"																					; あ行
+order_group_btn[]	=	"か行"																					; か行
+order_group_btn[]	=	"さ行"																					; さ行
+order_group_btn[]	=	"た行"																					; た行
+order_group_btn[]	=	"な行"																					; な行
+order_group_btn[]	=	"は行"																					; は行
+order_group_btn[]	=	"ま行"																					; ま行
+order_group_btn[]	=	"や行"																					; や行
+order_group_btn[]	=	"ら行"																					; ら行
+order_group_btn[]	=	"わ行"																					; わ行
