レーベルクローラー実装

--- a/codeigniter/application/resource/ini/app.ini
+++ b/codeigniter/application/resource/ini/app.ini
@@ -21,6 +21,7 @@ main_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/240x180.jpg"	
 sub_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/scap/%NUM%.jpg"						; サブサムネイルURL
 affiliate_link		=	"http://click.duga.jp/%PATH%%AGENT_ID%-%BANNER_ID%"										; アフィリエイトリンク
 actress_list		=	"http://duga.jp/main/av/%ORDER%.html"													; 女優一覧URL
+label_list			=	"http://duga.jp/main/label/%ORDER%.html"												; レーベル一覧URL
 
 ; カテゴリー名
 [category]
@@ -116,3 +117,16 @@ order_group_btn[]	=	"ま行"																					; ま行
 order_group_btn[]	=	"や行"																					; や行
 order_group_btn[]	=	"ら行"																					; ら行
 order_group_btn[]	=	"わ行"																					; わ行
+
+; レーベル名50音順ソート
+[label_list]
+order[]				=	"a"																						; あ
+order[]				=	"k"																						; か
+order[]				=	"s"																						; さ
+order[]				=	"t"																						; た
+order[]				=	"n"																						; な
+order[]				=	"h"																						; は
+order[]				=	"m"																						; ま
+order[]				=	"y"																						; や
+order[]				=	"r"																						; ら
+order[]				=	"w"																						; わ
