--- a/codeigniter/application/resource/ini/app.ini
+++ b/codeigniter/application/resource/ini/app.ini
@@ -17,11 +17,12 @@ csv_all				=	"http://duga.jp/productcsv/type=mp4/category=11/"										; 作品
 csv_month			=	"http://duga.jp/productcsv/type=mp4/category=11/openstt=%YYYYmm%01/"					; 作品データcsvダウンロードURL(月指定)
 ranking				=	"http://duga.jp/ranking/=/category=11/"													; ランキングURL
 category			=	"http://duga.jp/search/=/q=%CATEGORY_NAME%/category=11/viewcount=100/pageno=%PAGE%/"	; カテゴリーURL
-main_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/240x180.jpg"							; メインサムネイルURL
-sub_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/scap/%NUM%.jpg"						; サブサムネイルURL
-affiliate_link		=	"http://click.duga.jp/%PATH%%AGENT_ID%-%BANNER_ID%"										; アフィリエイトリンク
 actress_list		=	"http://duga.jp/main/av/%ORDER%.html"													; 女優一覧URL
 label_list			=	"http://duga.jp/main/label/%ORDER%.html"												; レーベル一覧URL
+main_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/240x180.jpg"							; メインサムネイルURL
+sub_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/scap/%NUM%.jpg"						; サブサムネイルURL
+label_banner		=	"http://ad.duga.jp/banner/%LABEL_PATH%/200-60.gif"										; レーベルバナーURL
+affiliate_link		=	"http://click.duga.jp/%PATH%%AGENT_ID%-%BANNER_ID%"										; アフィリエイトリンク
 
 ; カテゴリー名
 [category]
@@ -130,3 +131,14 @@ order[]				=	"m"																						; ま
 order[]				=	"y"																						; や
 order[]				=	"r"																						; ら
 order[]				=	"w"																						; わ
+
+order_btn[]			=	"あ行"																					; あ行
+order_btn[]			=	"か行"																					; か行
+order_btn[]			=	"さ行"																					; さ行
+order_btn[]			=	"た行"																					; た行
+order_btn[]			=	"な行"																					; な行
+order_btn[]			=	"は行"																					; は行
+order_btn[]			=	"ま行"																					; ま行
+order_btn[]			=	"や行"																					; や行
+order_btn[]			=	"ら行"																					; ら行
+order_btn[]			=	"わ行"																					; わ行
