トップ実装

--- a/codeigniter/application/resource/ini/app.ini
+++ b/codeigniter/application/resource/ini/app.ini
@@ -7,6 +7,13 @@
 agent_id			=	"22125"																					; 代理店ID
 banner_id			=	"01"																					; バナーID
 
+; トップページ
+[top]
+latest_disp_num		=	4																						; 新着動画表示件数
+rank_disp_num		=	4																						; ランキング表示件数
+pickup_disp_num		=	4																						; ピックアップ表示件数
+pickup_category		=	"11,13,15"																				; ピックアップするカテゴリー
+
 ; 各種フラグ
 [flag]
 initial_crawl		=	1																						; 初回クロールフラグ (有効:1/無効:0)
@@ -46,7 +53,6 @@ name[]				=	"OL"																					; カテゴリーID 17
 name[]				=	"ふたなり"																				; カテゴリーID 18
 name[]				=	"バイブ"																					; カテゴリーID 19
 name[]				=	"美少女"																					; カテゴリーID 20
-name[]				=	"盗撮"																					; カテゴリーID 21
 
 ; 女優名50音順ソート
 [actress_list]
