リコメンド表示実装

--- a/codeigniter/application/resource/ini/app.ini
+++ b/codeigniter/application/resource/ini/app.ini
@@ -7,13 +7,6 @@
 agent_id			=	"22125"																					; 代理店ID
 banner_id			=	"01"																					; バナーID
 
-; トップページ
-[top]
-latest_disp_num		=	4																						; 新着動画表示件数
-rank_disp_num		=	4																						; ランキング表示件数
-pickup_disp_num		=	4																						; ピックアップ表示件数
-pickup_category		=	"11,13,15"																				; ピックアップするカテゴリー
-
 ; 各種フラグ
 [flag]
 initial_crawl		=	1																						; 初回クロールフラグ (有効:1/無効:0)
@@ -30,6 +23,17 @@ main_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/240x180.jpg"	
 sub_thumbnail		=	"http://pic.duga.jp/unsecure/%PRODUCT_ID%/noauth/scap/%NUM%.jpg"						; サブサムネイルURL
 label_banner		=	"http://ad.duga.jp/banner/%LABEL_PATH%/200-60.gif"										; レーベルバナーURL
 affiliate_link		=	"http://click.duga.jp/%PATH%%AGENT_ID%-%BANNER_ID%"										; アフィリエイトリンク
+
+; トップページ
+[top]
+latest_disp_num		=	4																						; 新着動画表示件数
+rank_disp_num		=	4																						; ランキング表示件数
+pickup_disp_num		=	4																						; ピックアップ表示件数
+pickup_category		=	"11,13,15"																				; ピックアップするカテゴリー
+
+; 作品ページ
+[product]
+recommend_disp_num	=	8																						; リコメンド表示件数
 
 ; カテゴリー名
 [category]
